chore: revert some more stuff

--- a/packages/rn-tester/android/app/build.gradle
+++ b/packages/rn-tester/android/app/build.gradle
@@ -95,7 +95,7 @@ react {
 
 project.ext.react = [
     enableCodegen: true, // Keep this here until it's sync'ed to Android template.
-    enableFabric: (System.getenv('USE_FABRIC') ?: 'false').toBoolean()
+    enableFabric: (System.getenv('USE_FABRIC') ?: 'true').toBoolean()
 ]
 
 //apply from: "../../../../react.gradle"
