--- a/template/ios/Podfile
+++ b/template/ios/Podfile
@@ -47,7 +47,7 @@ target 'HelloWorld-tvOS' do
     # Hermes not yet available on tvOS
     :hermes_enabled => false,
     :fabric_enabled => flags[:fabric_enabled],
-    # An abosolute path to your application root.
+    # An absolute path to your application root.
     :app_path => "#{Dir.pwd}/.."
   )
 
