--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-native-tvos",
-  "version": "0.69.8-2rc0",
+  "name": "react-native",
+  "version": "1000.0.0",
   "bin": "./cli.js",
   "description": "A framework for building native apps using React",
   "license": "MIT",
@@ -177,7 +177,7 @@
     "metro-babel-register": "0.70.3",
     "mkdirp": "^0.5.1",
     "prettier": "^2.4.1",
-    "react-native-core": "npm:react-native@0.69.8",
+    "react-native-core": "npm:react-native@1000.0.0",
     "shelljs": "^0.8.5",
     "signedsource": "^1.0.0",
     "ws": "^6.1.4",
