--- a/template/package.json
+++ b/template/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "react": "18.2.0",
-    "react-native": "npm:react-native-tvos@0.71.7"
+    "react-native": "npm:react-native-tvos@0.71.7-0rc0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
