Change Maven group for TV repo

--- a/ReactAndroid/build.gradle
+++ b/ReactAndroid/build.gradle
@@ -23,7 +23,9 @@ import kotlin.Pair
 import de.undercouch.gradle.tasks.download.Download
 
 version = VERSION_NAME
-group = "com.facebook.react"
+// group = "com.facebook.react"
+// Group for the TV repo
+group = "io.github.react-native-tvos"
 
 // We download various C++ open-source dependencies into downloads.
 // We then copy both the downloaded code and our custom makefiles and headers into third-party-ndk.
