--- a/ReactAndroid/gradle.properties
+++ b/ReactAndroid/gradle.properties
@@ -1,5 +1,8 @@
 VERSION_NAME=0.71.7-0rc0
-GROUP=com.facebook.react
+
+# GROUP=com.facebook.react
+# Group for the TV repo
+GROUP=io.github.react-native-tvos
 
 # JVM Versions
 ANDROIDX_APPCOMPAT_VERSION=1.4.1
