--- a/ReactAndroid/hermes-engine/build.gradle
+++ b/ReactAndroid/hermes-engine/build.gradle
@@ -14,7 +14,10 @@ plugins {
     id("signing")
 }
 
-group = "com.facebook.react"
+// group = "com.facebook.react"
+// Group for the TV repo
+group = "io.github.react-native-tvos"
+
 version = parent.publishing_version
 def cmakeVersion = parent.cmake_version
 
