--- a/template/android/app/build.gradle
+++ b/template/android/app/build.gradle
@@ -151,7 +151,12 @@ android {
 
 dependencies {
     // The version of react-native is set by the React Native Gradle Plugin
-    implementation("com.facebook.react:react-android")
+
+    // For the TV repo, the plugin does not set the version correctly, so we add the version
+    // in gradle.properties for now
+    // We also use the io.github.react-native-tvos group for the react-android and hermes-android dependencies
+
+    implementation("io.github.react-native-tvos:react-android:${REACT_NATIVE_TV_VERSION_STRING}")
 
     implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.0.0")
 
@@ -162,7 +167,7 @@ dependencies {
 
     debugImplementation("com.facebook.flipper:flipper-fresco-plugin:${FLIPPER_VERSION}")
     if (hermesEnabled.toBoolean()) {
-        implementation("com.facebook.react:hermes-android")
+        implementation("io.github.react-native-tvos:hermes-android:${REACT_NATIVE_TV_VERSION_STRING}")
     } else {
         implementation jscFlavor
     }
