--- a/template/android/gradle.properties
+++ b/template/android/gradle.properties
@@ -42,3 +42,7 @@ newArchEnabled=false
 # Use this property to enable or disable the Hermes JS engine.
 # If set to false, you will be using JSC instead.
 hermesEnabled=true
+
+# react-native-gradle-plugin does not yet set the version automatically
+# for the TV repo, so we set the version here
+REACT_NATIVE_TV_VERSION_STRING=0.71.7-0rc0
