Add tvos-types.d.ts to package files

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "!template/package-lock.json",
     "!template/yarn.lock",
     "third-party-podspecs",
+    "tvos-types.d.ts",
     "types"
   ],
   "scripts": {
