--- a/template/ios/Podfile
+++ b/template/ios/Podfile
@@ -22,7 +22,7 @@ target 'HelloWorld' do
     # Hermes is now enabled by default. Disable by setting this flag to false.
     # Upcoming versions of React Native may rely on get_default_flags(), but
     # we make it explicit here to aid in the React Native upgrade process.
-    :hermes_enabled => false,
+    :hermes_enabled => true,
     :fabric_enabled => flags[:fabric_enabled],
     # Enables Flipper.
     #
@@ -50,8 +50,10 @@ target 'HelloWorld-tvOS' do
 
   use_react_native!(
     :path => config[:reactNativePath],
-    # Hermes not yet available on tvOS
-    :hermes_enabled => false,
+    # Hermes is now enabled by default. Disable by setting this flag to false.
+    # Upcoming versions of React Native may rely on get_default_flags(), but
+    # we make it explicit here to aid in the React Native upgrade process.
+    :hermes_enabled => true,
     :fabric_enabled => flags[:fabric_enabled],
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
