--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-tvos",
-  "version": "0.71.10-0rc0",
+  "version": "0.71.10-0",
   "bin": "./cli.js",
   "description": "A framework for building native apps using React",
   "license": "MIT",
