--- a/template/ios/Podfile
+++ b/template/ios/Podfile
@@ -16,6 +16,17 @@ target 'HelloWorld' do
   # Flags change depending on the env values.
   flags = get_default_flags()
 
+  # If you are using a `react-native-flipper` your iOS build will fail when `NO_FLIPPER=1` is set.
+  # because `react-native-flipper` depends on (FlipperKit,...) that will be excluded
+  #
+  # To fix this you can also exclude `react-native-flipper` using a `react-native.config.js`
+  # ```js
+  # module.exports = {
+  #   dependencies: {
+  #     ...(process.env.NO_FLIPPER ? { 'react-native-flipper': { platforms: { ios: null } } } : {}),
+  # ```
+  flipper_config = ENV['NO_FLIPPER'] == "1" ? FlipperConfiguration.disabled : FlipperConfiguration.enabled
+
   use_react_native!(
     :path => config[:reactNativePath],
     # Hermes is now enabled by default. Disable by setting this flag to false.
@@ -27,7 +38,7 @@ target 'HelloWorld' do
     #
     # Note that if you have use_frameworks! enabled, Flipper will not work and
     # you should disable the next line.
-    # :flipper_configuration => flipper_config,
+    :flipper_configuration => flipper_config,
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
