--- a/packages/react-native/ReactAndroid/gradle.properties
+++ b/packages/react-native/ReactAndroid/gradle.properties
@@ -1,5 +1,8 @@
 VERSION_NAME=0.72.4
-GROUP=com.facebook.react
+
+# GROUP=com.facebook.react
+# Group for the TV repo
+GROUP=io.github.react-native-tvos
 
 # JVM Versions
 ANDROIDX_APPCOMPAT_VERSION=1.4.1
