--- a/packages/react-native/ReactAndroid/external-artifacts/build.gradle
+++ b/packages/react-native/ReactAndroid/external-artifacts/build.gradle
@@ -9,7 +9,10 @@ plugins {
     id("maven-publish")
 }
 
-group = "com.facebook.react"
+// group = "com.facebook.react"
+// Group for the TV repo
+group = "io.github.react-native-tvos"
+
 version = parent.publishing_version
 configurations.maybeCreate("default")
 
