--- a/packages/react-native/ReactAndroid/publish.gradle
+++ b/packages/react-native/ReactAndroid/publish.gradle
@@ -75,13 +75,26 @@ publishing {
         }
     }
 
-    if (signingKey && signingPwd) {
-        logger.info("PGP Key found - Signing enabled")
-        signing {
-            useInMemoryPgpKeys(signingKey, signingPwd)
-            sign(publishing.publications.release)
-        }
-    } else {
-        logger.info("Signing disabled as the PGP key was not found")
+//     if (signingKey && signingPwd) {
+//         logger.info("PGP Key found - Signing enabled")
+//         signing {
+//             useInMemoryPgpKeys(signingKey, signingPwd)
+//             sign(publishing.publications.release)
+//         }
+//     } else {
+//         logger.info("Signing disabled as the PGP key was not found")
+//     }
+
+// For the TV repo, we sign manually for now, using the gpg command line tool.
+// Properties that need to be set:
+//
+// signing.gnupg.executable=gpg
+// signing.gnupg.useLegacyGpg=true
+// signing.gnupg.keyName=(your key ID)
+// signing.keyId=(your key ID)
+// signing.secretKeyRingFile=(file with your exported secret keys)
+    signing {
+      useGpgCmd()
+      sign(publishing.publications.release)
     }
 }
