TV patch 13: top level scripts

--- a/scripts/.tests.env
+++ b/scripts/.tests.env
@@ -26,6 +26,7 @@ export ANDROID_DISABLE_AVD_TESTS=1
 ## IOS ##
 export IOS_TARGET_OS="latest"
 export IOS_DEVICE="iPhone 14"
+export TVOS_DEVICE="Apple TV"
 export SDK_IOS="iphonesimulator"
 
 ## CI OVERRIDES ##
