--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-native",
+  "name": "react-native-tvos",
   "version": "0.72.4",
   "bin": "./cli.js",
   "description": "A framework for building native apps using React",
