--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@react-native-tvos/monorepo",
   "private": true,
-  "version": "1000.0.0",
+  "version": "0.72.4-0rc0",
   "description": "A framework for building native apps using React",
   "license": "MIT",
   "repository": "github:facebook/react-native",
@@ -95,6 +95,7 @@
     "shelljs": "^0.8.5",
     "signedsource": "^1.0.0",
     "typescript": "4.1.3",
-    "ws": "^6.2.2"
+    "ws": "^6.2.2",
+    "react-native-core": "npm:react-native@0.72.4"
   }
 }
