--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-tvos",
-  "version": "0.72.4",
+  "version": "0.72.4-0rc0",
   "bin": "./cli.js",
   "description": "A framework for building native apps using React",
   "license": "MIT",
