--- a/packages/react-native/template/package.json
+++ b/packages/react-native/template/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "expo": "^49.0.7",
     "react": "18.2.0",
-    "react-native": "npm:react-native-tvos@0.72.4"
+    "react-native": "npm:react-native-tvos@0.72.4-0rc0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
