TV patch 26: Move TV README to README.md

--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -34,6 +34,7 @@
     "ReactAndroid",
     "ReactCommon",
     "README.md",
+    "README-core.md",
     "rn-get-polyfills.js",
     "scripts/compose-source-maps.js",
     "scripts/find-node-for-xcode.sh",
@@ -72,7 +73,7 @@
     "types"
   ],
   "scripts": {
-    "prepack": "cp ../../README-tv.md ./README.md"
+    "prepack": "cp ../../README.md ./README.md; cp ../../README-core.md ./README-core.md"
   },
   "peerDependencies": {
     "react": "18.2.0"
