--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@react-native-tvos/monorepo",
   "private": true,
-  "version": "0.72.4-0rc1",
+  "version": "0.72.4-0",
   "description": "A framework for building native apps using React",
   "license": "MIT",
   "repository": "github:facebook/react-native",
