TV 0.73 patch 5: ReactAndroid

--- a/packages/react-native/ReactAndroid/gradle.properties
+++ b/packages/react-native/ReactAndroid/gradle.properties
@@ -1,5 +1,7 @@
 VERSION_NAME=0.73.0-rc.1
-react.internal.publishingGroup=com.facebook.react
+# react.internal.publishingGroup=com.facebook.react
+# For TV use this group
+react.internal.publishingGroup=io.github.react-native-tvos
 
 android.useAndroidX=true
 android.enableJetifier=true
