TV 0.73 patch 6: RNTester

--- a/packages/rn-tester/Podfile
+++ b/packages/rn-tester/Podfile
@@ -1,7 +1,8 @@
 require_relative '../react-native/scripts/react_native_pods'
 
+source 'https://github.com/react-native-tvos/react-native-tvos-podspecs.git'
 source 'https://cdn.cocoapods.org/'
-platform :ios, min_ios_version_supported
+platform :tvos, min_ios_version_supported
 
 cmake_path = `command -v cmake`
 
@@ -32,9 +33,8 @@ if USE_FRAMEWORKS
   use_frameworks! :linkage => linkage.to_sym
 end
 
-$shouldUseFlipper =  ENV['USE_FLIPPER'] ? ENV['USE_FLIPPER'] == '1' : !IN_CI && !USE_FRAMEWORKS
+def pods(target_name, options = {}, use_flipper: false)
 
-def pods(target_name, options = {}, use_flipper: $shouldUseFlipper)
   project 'RNTesterPods.xcodeproj'
 
   fabric_enabled = true
@@ -47,8 +47,8 @@ def pods(target_name, options = {}, use_flipper: $shouldUseFlipper)
   use_react_native!(
     path: @prefix_path,
     fabric_enabled: fabric_enabled,
-    hermes_enabled: hermes_enabled,
-    flipper_configuration: use_flipper ? FlipperConfiguration.enabled : FlipperConfiguration.disabled,
+    hermes_enabled: ENV['USE_HERMES'] == '1',
+    flipper_configuration: FlipperConfiguration.disabled,
     app_path: "#{Dir.pwd}",
     config_file_dir: "#{Dir.pwd}/node_modules",
     production: false, #deprecated
