--- a/packages/react-native/ReactAndroid/gradle.properties
+++ b/packages/react-native/ReactAndroid/gradle.properties
@@ -1,4 +1,5 @@
-VERSION_NAME=0.73.0-rc.1
+VERSION_NAME=0.73.0-0rc0
+
 # react.internal.publishingGroup=com.facebook.react
 # For TV use this group
 react.internal.publishingGroup=io.github.react-native-tvos
