--- a/packages/react-native/template/package.json
+++ b/packages/react-native/template/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "expo": "^49.0.7",
     "react": "18.2.0",
-    "react-native": "npm:react-native-tvos@0.73.0-rc1"
+    "react-native": "npm:react-native-tvos@0.73.0-0rc0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
