--- a/packages/rn-tester/android/app/build.gradle
+++ b/packages/rn-tester/android/app/build.gradle
@@ -180,7 +180,8 @@ android {
 dependencies {
     // Build React Native from source
     implementation project(':packages:react-native:ReactAndroid')
-    implementation project(':packages:react-native:ReactAndroid:flipper-integration')
+    // No Flipper for TV
+    // implementation project(':packages:react-native:ReactAndroid:flipper-integration')
 
     // Consume Hermes as built from source only for the Hermes variant.
     hermesImplementation(project(":packages:react-native:ReactAndroid:hermes-engine"))
