--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -150,6 +150,6 @@
     ]
   },
   "devDependencies": {
-    "react-native-core": "npm:react-native@0.73.0-rc.6"
+    "react-native-core": "npm:react-native@0.73.0"
   }
 }
