--- a/packages/react-native/package.json
+++ b/packages/react-native/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-tvos",
-  "version": "0.73.0-0rc3",
+  "version": "0.73.0-0",
   "description": "A framework for building native apps using React",
   "license": "MIT",
   "repository": {
