--- a/packages/react-native/template/ios/Podfile
+++ b/packages/react-native/template/ios/Podfile
@@ -18,27 +18,30 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
-target 'HelloWorld' do
-  config = use_native_modules!
-  platform :ios, min_ios_version_supported
+####### For now, only one target at a time can be used in a React Native podfile ########
+####### https://github.com/react-native-tvos/react-native-tvos/issues/619        ########
 
-  use_react_native!(
-    :path => config[:reactNativePath],
-    # Enables Flipper.
-    #
-    # Note that if you have use_frameworks! enabled, Flipper will not work and
-    # you should disable the next line.
-    :flipper_configuration => flipper_config,
-    # An absolute path to your application root.
-    :app_path => "#{Pod::Config.instance.installation_root}/.."
-  )
-
-  target 'HelloWorldTests' do
-    inherit! :complete
-    # Pods for testing
-  end
-
-end
+# target 'HelloWorld' do
+#   config = use_native_modules!
+#   platform :ios, min_ios_version_supported
+# 
+#   use_react_native!(
+#     :path => config[:reactNativePath],
+#     # Enables Flipper.
+#     #
+#     # Note that if you have use_frameworks! enabled, Flipper will not work and
+#     # you should disable the next line.
+#     :flipper_configuration => flipper_config,
+#     # An absolute path to your application root.
+#     :app_path => "#{Pod::Config.instance.installation_root}/.."
+#   )
+# 
+#   target 'HelloWorldTests' do
+#     inherit! :complete
+#     # Pods for testing
+#   end
+# 
+# end
 
 target 'HelloWorld-tvOS' do
   config = use_native_modules!
