--- a/packages/react-native/template/package.json
+++ b/packages/react-native/template/package.json
@@ -11,9 +11,9 @@
     "test": "jest"
   },
   "dependencies": {
-    "expo": "^49.0.16",
+    "expo": "^50.0.0-preview.4",
     "react": "18.2.0",
-    "react-native": "npm:react-native-tvos@0.73.0-0"
+    "react-native": "npm:react-native-tvos@0.73.1-0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
